# rust-representer

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml  dockerhub.yml
src/: ident_visitor.rs  lib.rs  main.rs  replace_identifier.rs  visit_mut.rs
test_files/: multiple_idents.rs
tests/: mod.rs
tests/blocks/: expected_mapping.json
tests/closure_expressions/: expected_mapping.json  expected_representation.txt
tests/const_names/: expected_mapping.json  expected_representation.txt
tests/enum_names/: expected_mapping.json
tests/enum_variants/: expected_mapping.json
tests/expected_output/: blocks.rs  closure_expressions.rs  const_names.rs  enum_names.rs  enum_variants.rs  fn_args.rs  fn_calls.rs  fn_names.rs  for_loops.rs  if_expressions.rs  if_let_expressions.rs  ignore_doc_comments.rs  impl_blocks.rs  let_bindings.rs  loops.rs  macro_inputs.rs  match_arms.rs  match_expressions.rs  method_calls.rs  multiple_let_bindings.rs  replace_same_identifier.rs  single_let_binding.rs  sort_by_ascii_file_items.rs  static_names.rs  struct_fields.rs  struct_names.rs  type_aliases.rs  typed_let_binding.rs  union_names.rs  user_defined_traits.rs  user_defined_types.rs  while_loops.rs
tests/fn_args/: expected_mapping.json
tests/fn_calls/: expected_mapping.json  expected_representation.txt
tests/fn_names/: expected_mapping.json  expected_representation.txt
tests/for_loops/: expected_mapping.json
tests/generics/: expected_mapping.json  expected_representation.txt
tests/test_input/: blocks.rs  (+19 more)
(+47 files in other folders)
