[package]
name = "representer"
version = "0.1.0"
authors = ["seanchen <skypemaster007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0.18"
syn = { version = "1.0.31", features = ["parsing", "full", "visit-mut"] }
