[package]
name = "representer"
version = "0.1.0"
authors = ["seanchen <seanchen11235@gmail.com>"]
edition = "2018"
description = "A normalizing representer for Exercism's Rust track."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
quote = "1.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.18"
syn = { version = "1.0.31", features = ["full", "visit-mut"] }
