[package]
name = "rust-representer"
version = "0.1.0"
authors = ["seanchen <seanchen11235@gmail.com>"]
edition = "2021"
description = "A normalizing representer for Exercism's Rust track."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
lazy_static = "1.4.0"
proc-macro2 = "1.0.18"
quote = "1.0"
syn = { version = "2.0.27", features = ["full", "visit-mut"] }
